Add back debug options to demos (#1499)